<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".view.MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline_horizontal1"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline_horizontal2"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7"/>

    <TextView
        android:id="@+id/textview_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/temperature"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edittext_temperature"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_temperatura"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@id/textview_temperature"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textview_temperature"/>
    <Button
        android:id="@+id/btn_celsius_to_fahrennheit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/celsiustofahrenheit"
        android:textAllCaps="true"
        app:layout_constraintEnd_toStartOf="@id/btn_celsius_to_kelvin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal1"
        app:layout_constraintBottom_toTopOf="@id/btn_fahrenheit_to_celsius"/>
    <Button
        android:id="@+id/btn_celsius_to_kelvin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/celsiustokelvin"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_celsius_to_fahrennheit"
        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal1"
        app:layout_constraintBottom_toTopOf="@id/btn_fahrenheit_to_kelvin"/>
    <Button
        android:id="@+id/btn_fahrenheit_to_celsius"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/fahrenheittocelsius"
        android:textAllCaps="true"
        app:layout_constraintTop_toBottomOf="@id/btn_celsius_to_fahrennheit"
        app:layout_constraintEnd_toStartOf="@id/btn_fahrenheit_to_kelvin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_kelvin_to_celsius"/>
    <Button
        android:id="@+id/btn_fahrenheit_to_kelvin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/fahrenheittokelvin"
        android:textAllCaps="true"
        app:layout_constraintStart_toEndOf="@id/btn_fahrenheit_to_celsius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_celsius_to_kelvin"
        app:layout_constraintBottom_toTopOf="@id/btn_kelvin_to_fahrenheit"/>
    <Button
        android:id="@+id/btn_kelvin_to_celsius"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/kelvintocelsius"
        android:textAllCaps="true"
        app:layout_constraintBottom_toTopOf="@id/guideline_horizontal2"
        app:layout_constraintTop_toBottomOf="@id/btn_fahrenheit_to_celsius"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_kelvin_to_fahrenheit"
        />
    <Button
        android:id="@+id/btn_kelvin_to_fahrenheit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/kelvintofahrenheit"
        android:textAllCaps="true"
        app:layout_constraintTop_toBottomOf="@id/btn_fahrenheit_to_kelvin"
        app:layout_constraintStart_toEndOf="@id/btn_kelvin_to_celsius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline_horizontal2"
        />

    <TextView
        android:id="@+id/textview_result_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/output"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal2"
        app:layout_constraintEnd_toEndOf="parent"/>
    
    <TextView
        android:id="@+id/textview_result_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/output"
        app:layout_constraintEnd_toEndOf="@id/textview_result_number"
        app:layout_constraintStart_toStartOf="@id/textview_result_number"
        app:layout_constraintTop_toBottomOf="@id/textview_result_number"/>

</androidx.constraintlayout.widget.ConstraintLayout>